@@ -1,6 +1,7 @@
 6.0.4
 -----
 1. Fix error with 'Go to artist' and no player connected.
+2. Add 'Select' actio to headers in track lists.
 
 6.0.3
 -----
